--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
        <!--Copyright-->
 
     <footer>
-      <h5>copyright The Tea Cozy 2017</h5>
+      <h5>©copyright The Tea Cozy 2017</h5>
     </footer>
 </body>
 </html>
